# AWorld-Runtime

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
aworld_runtime/: __init__.py  cli.py  config.py  logging_utils.py
aworld_runtime/gaia/: __init__.py
aworld_runtime/gaia/api/: __init__.py  gaia_fastapi.py
aworld_runtime/gaia/models/: __init__.py
aworld_runtime/gaia/services/: __init__.py  action_collection.py  sse_server.py  utils.py
aworld_runtime/gaia/services/documents/: __init__.py  csv_collection.py  docx_collection.py  pdf_collection.py  pptx_collection.py  txt_collection.py  xlsx_collection.py
aworld_runtime/gaia/services/intelligence/: __init__.py  code_collection.py  think_collection.py
aworld_runtime/gaia/services/media/: __init__.py  audio_collection.py  image_collection.py  video_collection.py
aworld_runtime/gaia/services/tools/: __init__.py  arxiv_collection.py  browser_collection.py  download_collection.py  pubchem_collection.py  search_collection.py  terminal_collection.py  wayback_collection.py  wikipedia_collection.py  youtube_collection.py
aworld_runtime/openrouter/: __init__.py
aworld_runtime/openrouter/api/: __init__.py  llm_fastapi.py
aworld_runtime/openrouter/models/: __init__.py  requests.py  responses.py
aworld_runtime/openrouter/services/: __init__.py  openrouter_service.py
tests/: __init__.py  test_openrouter_service.py
